--- a/src/StoreApi/StoreApi.csproj
+++ b/src/StoreApi/StoreApi.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
     <PackageReference Include="Serilog" Version="4.0.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.3" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.4" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
@@ -18,8 +19,7 @@
   <ItemGroup>
     <Folder Include="Common\" />
     <Folder Include="Features\" />
-    <Folder Include="Infrastructure\" />
-    <Folder Include="Entities\" /> 
+    <Folder Include="Infrastructure\" /> 
   </ItemGroup>
 
 </Project>
