--- a/src/StoreApi/StoreApi.csproj
+++ b/src/StoreApi/StoreApi.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Common\" /> 
+    <Folder Include="Common\Exceptions\" /> 
   </ItemGroup>
 
 </Project>
