--- a/src/StoreApi/StoreApi.csproj
+++ b/src/StoreApi/StoreApi.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Common\DataTransferObjects\Customers\" />
     <Folder Include="Common\Exceptions\" /> 
   </ItemGroup>
 
