Add jwt authentication

--- a/src/StoreApi/appsettings.json
+++ b/src/StoreApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "validIssuer": "GeekStoreApi",
+    "validAudience": "localhost:5216",
+    "expires": 60
+  },
   "AllowedHosts": "*"
 }
