--- a/compose.development.yaml
+++ b/compose.development.yaml
@@ -17,6 +17,15 @@
       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
     depends_on: [ kafka ]
     ports: [ "8080:8080" ]
+    
+  schema-registry:
+    image: confluentinc/cp-schema-registry:7.6.0
+    depends_on: [ kafka ]
+    environment:
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka:9092
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8082
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+    ports: [ "8082:8082" ]
 
   store-api:
     image: mcr.microsoft.com/dotnet/sdk:8.0
@@ -28,8 +37,9 @@
       DOTNET_RUNNING_IN_CONTAINER: true
       ASPNETCORE_HTTP_PORTS: 5000
       KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      SCHEMA_REGISTRY_URL: http://schema-registry:8082
     command: dotnet watch run
-    depends_on: [ kafka ]
+    depends_on: [ kafka, schema-registry ]
     ports: [ "5000:5000" ]
     
   payment-service:
