--- a/src/StoreApi/StoreApi.csproj
+++ b/src/StoreApi/StoreApi.csproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Apache.Avro" Version="1.12.0" />
     <PackageReference Include="Confluent.Kafka" Version="2.10.0" />
+    <PackageReference Include="Confluent.SchemaRegistry" Version="2.10.0" />
+    <PackageReference Include="Confluent.SchemaRegistry.Serdes.Avro" Version="2.10.0" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
